content/docs/9500_python-api/9000_versions/v0.2.9/splitgraph.mdx

import "@splitgraph/design/css/sphinxtheme.css";

export const meta = {
  title: "splitgraph package",
  id: "splitgraph package"
};

<div className=" rst-content"><nav className="toc"><ol className="toc-level toc-level-1"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#module-contents">Module contents</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#subpackages">Subpackages</a></li><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#submodules">Submodules</a><ol className="toc-level toc-level-2"><li className="toc-item toc-item-h2"><a className="toc-link toc-link-h2" href="#splitgraphexceptions-module">splitgraph.exceptions module</a></li></ol></li></ol></nav><div className="section" id="module-splitgraph">
<span id="module-contents"></span><h2 id="module-contents">Module contents<a className="headerlink" href="#module-splitgraph" title="Permalink to this headline">¶</a></h2>
</div><div className="section" id="splitgraph-package">

<div className="section" id="subpackages">
<h2 id="subpackages">Subpackages<a className="headerlink" href="#subpackages" title="Permalink to this headline">¶</a></h2>
<div className="toctree-wrapper compound">
<ul>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.cloud/">splitgraph.cloud package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.cloud/#module-splitgraph.cloud">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.commandline/">splitgraph.commandline package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.cloud">splitgraph.commandline.cloud module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.common">splitgraph.commandline.common module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.engine">splitgraph.commandline.engine module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.example">splitgraph.commandline.example module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.image_creation">splitgraph.commandline.image_creation module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.image_info">splitgraph.commandline.image_info module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.ingestion">splitgraph.commandline.ingestion module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.misc">splitgraph.commandline.misc module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.mount">splitgraph.commandline.mount module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.push_pull">splitgraph.commandline.push_pull module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline.splitfile">splitgraph.commandline.splitfile module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.commandline/#module-splitgraph.commandline">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.config/">splitgraph.config package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.argument_config">splitgraph.config.argument_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.config">splitgraph.config.config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.config_file_config">splitgraph.config.config_file_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.default_config">splitgraph.config.default_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.environment_config">splitgraph.config.environment_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.export">splitgraph.config.export module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.keys">splitgraph.config.keys module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config.system_config">splitgraph.config.system_config module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.config/#module-splitgraph.config">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.core/">splitgraph.core package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#subpackages">Subpackages</a><ul>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.core.indexing/">splitgraph.core.indexing package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.core.indexing/#submodules">Submodules</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.core.indexing/#module-splitgraph.core.indexing.bloom">splitgraph.core.indexing.bloom module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.core.indexing/#module-splitgraph.core.indexing.range">splitgraph.core.indexing.range module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.core.indexing/#module-splitgraph.core.indexing">Module contents</a></li>
</ul>
</li>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.core.sql/">splitgraph.core.sql package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.core.sql/#module-splitgraph.core.sql">Module contents</a></li>
</ul>
</li>
</ul>
</li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.common">splitgraph.core.common module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.engine">splitgraph.core.engine module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#splitgraph-core-fdw-checkout-module">splitgraph.core.fdw_checkout module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.fragment_manager">splitgraph.core.fragment_manager module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.image">splitgraph.core.image module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.image_manager">splitgraph.core.image_manager module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.metadata_manager">splitgraph.core.metadata_manager module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.migration">splitgraph.core.migration module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.object_manager">splitgraph.core.object_manager module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.output">splitgraph.core.output module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.registry">splitgraph.core.registry module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.repository">splitgraph.core.repository module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.server">splitgraph.core.server module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.table">splitgraph.core.table module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core.types">splitgraph.core.types module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.core/#module-splitgraph.core">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.engine/">splitgraph.engine package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.engine/#subpackages">Subpackages</a><ul>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.engine.postgres/">splitgraph.engine.postgres package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.engine.postgres/#submodules">Submodules</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.engine.postgres/#module-splitgraph.engine.postgres.engine">splitgraph.engine.postgres.engine module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.engine.postgres/#module-splitgraph.engine.postgres">Module contents</a></li>
</ul>
</li>
</ul>
</li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.engine/#module-splitgraph.engine">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.hooks/">splitgraph.hooks package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#subpackages">Subpackages</a><ul>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.hooks.data_source/">splitgraph.hooks.data_source package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.hooks.data_source/#submodules">Submodules</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.hooks.data_source/#module-splitgraph.hooks.data_source.base">splitgraph.hooks.data_source.base module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.hooks.data_source/#module-splitgraph.hooks.data_source.fdw">splitgraph.hooks.data_source.fdw module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.hooks.data_source/#module-splitgraph.hooks.data_source">Module contents</a></li>
</ul>
</li>
</ul>
</li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.external_objects">splitgraph.hooks.external_objects module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.mount_handlers">splitgraph.hooks.mount_handlers module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.s3">splitgraph.hooks.s3 module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.s3_server">splitgraph.hooks.s3_server module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks.splitfile_commands">splitgraph.hooks.splitfile_commands module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.hooks/#module-splitgraph.hooks">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.ingestion/">splitgraph.ingestion package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion/#subpackages">Subpackages</a><ul>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.ingestion.csv/">splitgraph.ingestion.csv package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.csv/#submodules">Submodules</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.csv/#module-splitgraph.ingestion.csv.fdw">splitgraph.ingestion.csv.fdw module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.csv/#module-splitgraph.ingestion.csv">Module contents</a></li>
</ul>
</li>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.ingestion.snowflake/">splitgraph.ingestion.snowflake package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.snowflake/#module-splitgraph.ingestion.snowflake">Module contents</a></li>
</ul>
</li>
<li className="toctree-l3"><a className="reference internal" href="splitgraph.ingestion.socrata/">splitgraph.ingestion.socrata package</a><ul>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.socrata/#submodules">Submodules</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata.fdw">splitgraph.ingestion.socrata.fdw module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata.mount">splitgraph.ingestion.socrata.mount module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata.querying">splitgraph.ingestion.socrata.querying module</a></li>
<li className="toctree-l4"><a className="reference internal" href="splitgraph.ingestion.socrata/#module-splitgraph.ingestion.socrata">Module contents</a></li>
</ul>
</li>
</ul>
</li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion/#module-splitgraph.ingestion.common">splitgraph.ingestion.common module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion/#module-splitgraph.ingestion.inference">splitgraph.ingestion.inference module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion/#module-splitgraph.ingestion.pandas">splitgraph.ingestion.pandas module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.ingestion/#module-splitgraph.ingestion">Module contents</a></li>
</ul>
</li>
<li className="toctree-l1"><a className="reference internal" href="splitgraph.splitfile/">splitgraph.splitfile package</a><ul>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.splitfile/#submodules">Submodules</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.splitfile/#module-splitgraph.splitfile.execution">splitgraph.splitfile.execution module</a></li>
<li className="toctree-l2"><a className="reference internal" href="splitgraph.splitfile/#module-splitgraph.splitfile">Module contents</a></li>
</ul>
</li>
</ul>
</div>
</div>
<div className="section" id="submodules">
<h2 id="submodules">Submodules<a className="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
</div>
<div className="section" id="module-splitgraph.exceptions">
<span id="splitgraph-exceptions-module"></span><h2 id="splitgraphexceptions-module">splitgraph.exceptions module<a className="headerlink" href="#module-splitgraph.exceptions" title="Permalink to this headline">¶</a></h2>
<p>Exceptions that can be raised by the Splitgraph library.</p>
<dl className="py exception">
<dt id="splitgraph.exceptions.APICompatibilityError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">APICompatibilityError</span></code><a className="headerlink" href="#splitgraph.exceptions.APICompatibilityError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions related to API incompatibilities</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.AuthAPIError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">AuthAPIError</span></code><a className="headerlink" href="#splitgraph.exceptions.AuthAPIError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions raised by the Auth API</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.CheckoutError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">CheckoutError</span></code><a className="headerlink" href="#splitgraph.exceptions.CheckoutError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Errors related to checking out/committing repositories</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.DataSourceError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">DataSourceError</span></code><a className="headerlink" href="#splitgraph.exceptions.DataSourceError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions raised by mount handlers.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.DockerUnavailableError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">DockerUnavailableError</span></code><a className="headerlink" href="#splitgraph.exceptions.DockerUnavailableError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Could not connect to the Docker daemon.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.EngineInitializationError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">EngineInitializationError</span></code><a className="headerlink" href="#splitgraph.exceptions.EngineInitializationError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when the engine isn’t initialized (no splitgraph_meta schema or audit triggers)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ExternalHandlerError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">ExternalHandlerError</span></code><a className="headerlink" href="#splitgraph.exceptions.ExternalHandlerError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Exceptions raised by external object handlers.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLAPIError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">GQLAPIError</span></code><a className="headerlink" href="#splitgraph.exceptions.GQLAPIError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>GQL API errors</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLRepoDoesntExistError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">GQLRepoDoesntExistError</span></code><a className="headerlink" href="#splitgraph.exceptions.GQLRepoDoesntExistError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.GQLAPIError" title="splitgraph.exceptions.GQLAPIError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.GQLAPIError</span></code></a></p>
<p>Repository doesn’t exist</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLUnauthenticatedError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">GQLUnauthenticatedError</span></code><a className="headerlink" href="#splitgraph.exceptions.GQLUnauthenticatedError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.GQLAPIError" title="splitgraph.exceptions.GQLAPIError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.GQLAPIError</span></code></a></p>
<p>Unauthenticated (user not logged in)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.GQLUnauthorizedError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">GQLUnauthorizedError</span></code><a className="headerlink" href="#splitgraph.exceptions.GQLUnauthorizedError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.GQLAPIError" title="splitgraph.exceptions.GQLAPIError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.GQLAPIError</span></code></a></p>
<p>Unauthorized (e.g. repository isn’t writeable by the user)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ImageNotFoundError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">ImageNotFoundError</span></code><a className="headerlink" href="#splitgraph.exceptions.ImageNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>A Splitgraph image doesn’t exist.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.IncompleteObjectDownloadError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">IncompleteObjectDownloadError</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">reason</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">BaseException</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">successful_objects</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.exceptions.IncompleteObjectDownloadError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when an error is encountered during download of multiple objects.
The handler is supposed to perform any necessary
cleanup and reraise <cite>reason</cite> at the earliest opportunity.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.IncompleteObjectUploadError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">IncompleteObjectUploadError</span></code><span className="sig-paren">(</span><em className="sig-param"><span className="n"><span className="pre">reason</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">Optional</span><span className="p"><span className="pre">[</span></span><span className="pre">BaseException</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">successful_objects</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em>, <em className="sig-param"><span className="n"><span className="pre">successful_object_urls</span></span><span className="p"><span className="pre">:</span></span> <span className="n"><span className="pre">List</span><span className="p"><span className="pre">[</span></span><span className="pre">str</span><span className="p"><span className="pre">]</span></span></span></em><span className="sig-paren">)</span><a className="headerlink" href="#splitgraph.exceptions.IncompleteObjectUploadError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when an error is encountered during upload of multiple objects.
The handler is supposed to perform any necessary
cleanup and reraise <cite>reason</cite> at the earliest opportunity.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectCacheError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">ObjectCacheError</span></code><a className="headerlink" href="#splitgraph.exceptions.ObjectCacheError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Issues with the object cache (not enough space)</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectIndexingError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">ObjectIndexingError</span></code><a className="headerlink" href="#splitgraph.exceptions.ObjectIndexingError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Errors related to indexing objects</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectMountingError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">ObjectMountingError</span></code><a className="headerlink" href="#splitgraph.exceptions.ObjectMountingError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Errors related to incompatible objects.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.ObjectNotFoundError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">ObjectNotFoundError</span></code><a className="headerlink" href="#splitgraph.exceptions.ObjectNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised when a physical object doesn’t exist in the cache.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.RepositoryNotFoundError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">RepositoryNotFoundError</span></code><a className="headerlink" href="#splitgraph.exceptions.RepositoryNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>A Splitgraph repository doesn’t exist.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.SplitGraphError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">SplitGraphError</span></code><a className="headerlink" href="#splitgraph.exceptions.SplitGraphError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <code className="xref py py-class docutils literal notranslate"><span className="pre">Exception</span></code></p>
<p>A generic Splitgraph exception.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.SplitfileError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">SplitfileError</span></code><a className="headerlink" href="#splitgraph.exceptions.SplitfileError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Generic error class for Splitfile interpretation/execution errors.</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.TableNotFoundError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">TableNotFoundError</span></code><a className="headerlink" href="#splitgraph.exceptions.TableNotFoundError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>A table doesn’t exist in an image</p>
</dd></dl>

<dl className="py exception">
<dt id="splitgraph.exceptions.UnsupportedSQLError">
<em className="property"><span className="pre">exception</span> </em><code className="sig-prename descclassname"><span className="pre">splitgraph.exceptions.</span></code><code className="sig-name descname"><span className="pre">UnsupportedSQLError</span></code><a className="headerlink" href="#splitgraph.exceptions.UnsupportedSQLError" title="Permalink to this definition">¶</a></dt>
<dd><p>Bases: <a className="reference internal" href="#splitgraph.exceptions.SplitGraphError" title="splitgraph.exceptions.SplitGraphError"><code className="xref py py-class docutils literal notranslate"><span className="pre">splitgraph.exceptions.SplitGraphError</span></code></a></p>
<p>Raised for unsupported SQL statements, for example, containing schema-qualified tables when the statement
is supposed to be used in an SQL/IMPORT Splitfile command.</p>
</dd></dl>

</div>

</div>
</div>